# perception_msgs

./: CMakeLists.txt  README.md  package.xml
msgs/: DetectedObject.msg  DetectedObjects.msg  LidarPoint.msg
