<?xml version="1.0"?>
<package format="2">
  <name>perception_msgs</name>
  <version>0.0.1</version>
  <description>The perception_msgs package</description>
  <maintainer email="luca911014@gmail.com">root</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>